--- a/SL.theme.css
+++ b/SL.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Shadow Light","description":"Dark style theme with shadows and light color borders. Background Image Version","author":"Asteria","version":"1.2.0"}*//{}
+//META{"name":"Shadow Light","description":"Dark style theme with shadows and light color borders. Background Image Version","author":"Asteria","version":"1.5","website":"https://discord.gg/QRxZPvc"}*//{}
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 @import url('https://asteria5675.github.io/BetterDiscordThemes/SourceCodes/sl_source.css');
 
